flint/capi.h

#define FL_OK 0
#define FL_ERROR_INVALID_ARG 0x0100
#define FL_ERROR_ABORTED 0x0102
#define FL_NONE (-2147483647 - 1)
typedef struct fl_tensor_impl_t *fl_tensor_t;
typedef struct fl_future_tensor_impl_t *fl_future_tensor_t;
typedef struct fl_operators_impl_t *fl_operators_t;
typedef enum fl_dtype_t {
  FL_DTYPE_UNKNOWN = 0,
  FL_DTYPE_FLOAT = 1,
  FL_DTYPE_LONG = 2,
  FL_DTYPE_UINT8 = 3,
  FL_DTYPE_FLOAT16 = 4,
  FL_DTYPE_INT8 = 6,
  FL_DTYPE_FP4E2M0X2 = 7,
  FL_DTYPE_BOOL = 8,
  FL_DTYPE_INT32 = 9,
  FL_DTYPE_FP8E4M3 = 10,
} fl_dtype_t;
typedef enum fl_device_type_t {
  FL_DEVICE_CPU = 0,
  FL_DEVICE_CUDA = 1,
  FL_DEVICE_CUDA_HOST = 2,
  FL_DEVICE_METAL = 3,
  FL_DEVICE_UNKNOWN = 4,
} fl_device_type_t;
FLAPI void fl_init(void);
FLAPI int32_t fl_is_device_available(fl_device_type_t device, int32_t *out);
FLAPI int32_t fl_get_last_error_code(void);
FLAPI const char *fl_get_last_error_message(void);
FLAPI int32_t fl_operators_create(fl_device_type_t device, fl_operators_t *out);
FLAPI void fl_operators_destroy(fl_operators_t operators);
FLAPI int32_t fl_operators_get_device(fl_operators_t operators, fl_device_type_t *out);
FLAPI int32_t fl_tensor_zeros(
    fl_operators_t operators,
    const int32_t *shape,
    int32_t ndim,
    fl_dtype_t dtype,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_empty(
    fl_operators_t operators,
    const int32_t *shape,
    int32_t ndim,
    fl_dtype_t dtype,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_host_empty(
    fl_operators_t operators,
    const int32_t *shape,
    int32_t ndim,
    fl_dtype_t dtype,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_from_data(
    fl_operators_t operators,
    const int32_t *shape,
    int32_t ndim,
    fl_dtype_t dtype,
    const void *data,
    int64_t data_size,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_host_data(fl_tensor_t tensor, void **out, int64_t *nbytes);
FLAPI int32_t fl_tensor_clone(fl_tensor_t tensor, fl_tensor_t *out);
FLAPI void fl_tensor_destroy(fl_tensor_t tensor);
FLAPI int32_t fl_tensor_get_dim(fl_tensor_t tensor, int32_t *out);
FLAPI int32_t fl_tensor_get_shape(fl_tensor_t tensor, int32_t dim, int32_t *out);
FLAPI int32_t fl_tensor_get_stride(fl_tensor_t tensor, int32_t dim, int32_t *out);
FLAPI int32_t fl_tensor_get_numel(fl_tensor_t tensor, int64_t *out);
FLAPI int32_t fl_tensor_get_dtype(fl_tensor_t tensor, fl_dtype_t *out);
FLAPI int32_t fl_tensor_get_device(fl_tensor_t tensor, fl_device_type_t *out);
FLAPI int32_t fl_tensor_is_contiguous(fl_tensor_t tensor, int32_t *out);
FLAPI int32_t fl_tensor_view(
    fl_tensor_t tensor,
    const int32_t *shape,
    int32_t ndim,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_transpose(
    fl_tensor_t tensor,
    int32_t dim0,
    int32_t dim1,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_slice(
    fl_tensor_t tensor,
    int32_t dim,
    int32_t begin,
    int32_t end,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_subtensor(fl_tensor_t tensor, int32_t index, fl_tensor_t *out);
FLAPI int32_t fl_tensor_unsqueeze(fl_tensor_t tensor, int32_t dim, fl_tensor_t *out);
FLAPI int32_t fl_tensor_squeeze(fl_tensor_t tensor, int32_t dim, fl_tensor_t *out);
FLAPI int32_t fl_tensor_contiguous(fl_operators_t operators, fl_tensor_t tensor, fl_tensor_t *out);
FLAPI int32_t fl_tensor_to_device(
    fl_operators_t operators,
    fl_tensor_t tensor,
    fl_device_type_t device,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_to_device_async(
    fl_tensor_t tensor,
    fl_device_type_t device,
    fl_future_tensor_t *out);
FLAPI int32_t fl_future_tensor_take(fl_future_tensor_t future, fl_tensor_t *out);
FLAPI int32_t fl_future_tensor_take_sync(fl_future_tensor_t future, fl_tensor_t *out);
FLAPI void fl_future_tensor_destroy(fl_future_tensor_t future);
FLAPI int32_t fl_tensor_cast(
    fl_operators_t operators,
    fl_tensor_t tensor,
    fl_dtype_t dtype,
    fl_tensor_t *out);
FLAPI int32_t fl_tensor_get_nbytes(fl_tensor_t tensor, int64_t *out);
FLAPI int32_t fl_tensor_copy_to_host(
    fl_operators_t operators,
    fl_tensor_t tensor,
    void *buffer,
    int64_t buffer_size);
FLAPI int32_t fl_arange(
    fl_operators_t operators,
    int64_t begin,
    int64_t end,
    int64_t step,
    fl_tensor_t *out);
FLAPI int32_t fl_rand(
    fl_operators_t operators,
    const int32_t *shape,
    int32_t ndim,
    fl_dtype_t dtype,
    fl_tensor_t *out);
FLAPI int32_t fl_randn(
    fl_operators_t operators,
    const int32_t *shape,
    int32_t ndim,
    fl_tensor_t *out);
FLAPI int32_t fl_manual_seed(fl_operators_t operators, uint64_t seed);
FLAPI int32_t fl_lookup(
    fl_operators_t operators,
    fl_tensor_t table,
    fl_tensor_t indices,
    fl_tensor_t *out);
FLAPI int32_t fl_rotary_embedding(
    fl_operators_t operators,
    fl_tensor_t positions,
    fl_tensor_t query,
    fl_tensor_t key,
    fl_tensor_t rotary_cache);
FLAPI int32_t fl_rms_norm(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t weight,
    float eps,
    fl_tensor_t *out);
FLAPI int32_t fl_layer_norm(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t weight,
    fl_tensor_t bias,
    float eps,
    fl_tensor_t *out);
FLAPI int32_t fl_conv2d(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t weight,
    fl_tensor_t bias,
    int32_t stride,
    int32_t padding,
    int32_t dilation,
    int32_t groups,
    fl_tensor_t *out);
FLAPI int32_t fl_conv1d(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t weight,
    fl_tensor_t bias,
    int32_t stride,
    int32_t padding,
    int32_t dilation,
    int32_t groups,
    fl_tensor_t *out);
FLAPI int32_t fl_conv_transpose1d(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t weight,
    fl_tensor_t bias,
    int32_t stride,
    int32_t padding,
    int32_t output_padding,
    int32_t groups,
    fl_tensor_t *out);
FLAPI int32_t fl_snake(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t alpha,
    fl_tensor_t beta,
    float eps,
    fl_tensor_t *out);
FLAPI int32_t fl_stft(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t window,
    int32_t n_fft,
    int32_t hop,
    int32_t centered,
    fl_tensor_t *out);
FLAPI int32_t fl_istft(
    fl_operators_t operators,
    fl_tensor_t spectrum,
    fl_tensor_t window,
    int32_t n_fft,
    int32_t hop,
    int32_t centered,
    fl_tensor_t *out);
FLAPI int32_t fl_group_norm(
    fl_operators_t operators,
    fl_tensor_t input,
    fl_tensor_t weight,
    fl_tensor_t bias,
    int32_t groups,
    float eps,
    fl_tensor_t *out);
FLAPI int32_t fl_upsample_nearest2d(
    fl_operators_t operators,
    fl_tensor_t input,
    int32_t scale,
    fl_tensor_t *out);
FLAPI int32_t fl_matmul(fl_operators_t operators, fl_tensor_t a, fl_tensor_t b, fl_tensor_t *out);
FLAPI int32_t fl_fp8_available(fl_device_type_t device, int32_t *out);
FLAPI int32_t fl_fp8_quantize(fl_tensor_t x, fl_tensor_t *data, fl_tensor_t *channel_scale);
FLAPI int32_t fl_fp8_dequantize(fl_tensor_t data, fl_tensor_t channel_scale, fl_tensor_t *out);
FLAPI int32_t fl_fp8_matmul(
    fl_tensor_t a,
    fl_tensor_t data,
    fl_tensor_t channel_scale,
    fl_tensor_t *out);
FLAPI int32_t fl_fp8_matmul_tensor_scale(
    fl_tensor_t a,
    fl_tensor_t data,
    fl_tensor_t scale,
    fl_tensor_t *out);
FLAPI int32_t fl_quick_gelu(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_mul(fl_operators_t operators, fl_tensor_t a, fl_tensor_t b, fl_tensor_t *out);
FLAPI int32_t fl_add(fl_operators_t operators, fl_tensor_t a, fl_tensor_t b, fl_tensor_t *out);
FLAPI int32_t fl_sub(fl_operators_t operators, fl_tensor_t a, fl_tensor_t b, fl_tensor_t *out);
FLAPI int32_t fl_eq(fl_operators_t operators, fl_tensor_t a, fl_tensor_t b, fl_tensor_t *out);
FLAPI int32_t fl_div(fl_operators_t operators, fl_tensor_t a, fl_tensor_t b, fl_tensor_t *out);
FLAPI int32_t fl_mul_scalar(
    fl_operators_t operators,
    fl_tensor_t input,
    float other,
    fl_tensor_t *out);
FLAPI int32_t fl_div_scalar(
    fl_operators_t operators,
    fl_tensor_t input,
    float other,
    fl_tensor_t *out);
FLAPI int32_t fl_mod_scalar(
    fl_operators_t operators,
    fl_tensor_t input,
    int64_t other,
    fl_tensor_t *out);
FLAPI int32_t fl_square(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_neg(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_abs(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_exp(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_sqrt(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_rsqrt(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_sigmoid(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_tanh(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_relu(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_gelu(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_silu(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_sin(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_cos(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_softmax(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_swiglu(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_geglu(fl_operators_t operators, fl_tensor_t input, fl_tensor_t *out);
FLAPI int32_t fl_sum(fl_operators_t operators, fl_tensor_t input, int32_t dim, fl_tensor_t *out);
FLAPI int32_t fl_max(fl_operators_t operators, fl_tensor_t input, int32_t dim, fl_tensor_t *out);
FLAPI int32_t fl_min(fl_operators_t operators, fl_tensor_t input, int32_t dim, fl_tensor_t *out);
FLAPI int32_t fl_cat(
    fl_operators_t operators,
    fl_tensor_t a,
    fl_tensor_t b,
    int32_t dim,
    fl_tensor_t *out);
FLAPI int32_t fl_causal_mask(fl_operators_t operators, int32_t max_len, fl_tensor_t *out);
FLAPI int32_t fl_paged_attention_available(int32_t *out);